--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.show-sql=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# ??????? ??????????? ??? ????? ??????????
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+# ??????? ??????????? ??? Spring Security
+logging.level.org.springframework.security=DEBUG
+
+# ??????? ??????????? ??? ?????? ??????
+logging.level.com.example.demo=DEBUG
