--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=postgresql://postgres:npMkMyGonUYFlpqTUZanNxyMfAZMfQei@mainline.proxy.rlwy.net:15642/railway
 spring.datasource.username=postgres
-spring.datasource.password=Adm1nP@ssw0rd!1
+spring.datasource.password=npMkMyGonUYFlpqTUZanNxyMfAZMfQei
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
