--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=demo
-spring.datasource.url=postgresql://postgres:npMkMyGonUYFlpqTUZanNxyMfAZMfQei@mainline.proxy.rlwy.net:15642/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=npMkMyGonUYFlpqTUZanNxyMfAZMfQei
+spring.datasource.password=Adm1nP@ssw0rd!1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+server.address=0.0.0.0
 
 # ??????? ??????????? ??? ????? ??????????
 logging.level.root=INFO
