--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -2,12 +2,12 @@
 FROM eclipse-temurin:21 AS build
 
 # Устанавливаем Maven
-RUN apt-get update && apt-get install -y maven
+RUN apt-get update && apt-get install -y maven && apt-get clean
 
 # Устанавливаем рабочую директорию
-WORKDIR /app
+WORKDIR /demo
 
-# Копируем файл pom.xml
+# Копируем pom.xml
 COPY pom.xml .
 
 # Загружаем зависимости
@@ -19,14 +19,17 @@ COPY src ./src
 # Собираем приложение
 RUN mvn clean package -DskipTests
 
+# Проверяем, что .jar файл создан
+RUN ls -al /demo/target 
+
 # Создаем исполняемый образ
 FROM eclipse-temurin:21-jre
 
 # Устанавливаем рабочую директорию для исполняемого приложения
-WORKDIR /app
+WORKDIR /demo
 
 # Копируем собранный .jar файл из предыдущего этапа
-COPY --from=build /app/target/demo-0.0.1-SNAPSHOT.jar demo-0.0.1-SNAPSHOT.jar
+COPY --from=build /demo/target/demo-0.0.1-SNAPSHOT.jar demo-0.0.1-SNAPSHOT.jar
 
 # Указываем, как запускать приложение
 ENTRYPOINT ["java", "-jar", "demo-0.0.1-SNAPSHOT.jar"]
