--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
-spring.datasource.url=postgresql://postgres:npMkMyGonUYFlpqTUZanNxyMfAZMfQei@postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=npMkMyGonUYFlpqTUZanNxyMfAZMfQei
+spring.datasource.password=Adm1nP@ssw0rd!1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
