--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=demo
-spring.datasource.url=postgresql://postgres:npMkMyGonUYFlpqTUZanNxyMfAZMfQei@postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=npMkMyGonUYFlpqTUZanNxyMfAZMfQei
+spring.datasource.password=Adm1nP@ssw0rd!1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.datasource.hikari.auto-commit=false
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 server.address=0.0.0.0
 
